--- a/public/css/mainFE.css
+++ b/public/css/mainFE.css
@@ -3,6 +3,15 @@ body{
     font-family: 'Quicksand', sans-serif !important;
     width: 100vw;
 }
+.container{
+    padding:0 !important;
+}
+@media only screen and (max-width: 576px) {
+    .container{
+        padding: 0 2rem !important;
+    }
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     P{
@@ -24,6 +33,12 @@ body{
     i.icon{
         font-size: calc(50% + .8vmin)!important;
     }
+    h1{
+        font-size: calc(25% + 6vmin)!important;
+    }
+    h3{
+        font-size: calc(35% + 3vmin)!important;
+    }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -43,6 +58,12 @@ body{
     P.xl{
         font-size: calc(40% + 1.6vmin)!important;
         margin-bottom: 0!important;
+    }
+    h1{
+        font-size: calc(30% + 6vmin)!important;
+    }
+    h3{
+        font-size: calc(40% + 3vmin)!important;
     }
 }
 
@@ -64,6 +85,12 @@ body{
         font-size: calc(50% + 1.6vmin)!important;
         margin-bottom: 0!important;
     }
+    h1{
+        font-size: calc(40% + 6vmin)!important;
+    }
+    h3{
+        font-size: calc(50% + 3vmin)!important;
+    }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -83,6 +110,12 @@ body{
     P.xl{
         font-size: calc(55% + 1.6vmin)!important;
         margin-bottom: 0!important;
+    }
+    h1{
+        font-size: calc(55% + 6vmin)!important;
+    }
+    h3{
+        font-size: calc(55% + 3vmin)!important;
     }
 }
 
