--- a/public/css/mainFE.css
+++ b/public/css/mainFE.css
@@ -11,6 +11,9 @@ body{
         padding: 0 2rem !important;
     }
 }
+.text-justify{
+    text-align: justify;
+}
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
