--- a/public/css/page/beranda.css
+++ b/public/css/page/beranda.css
@@ -5,15 +5,15 @@
 .headerImage{
     filter: brightness(80%);
     position: relative;
-    width: 100%;
-    height: auto;
+    width: 100vw;
+    height: 30rem;
     object-fit: cover;
 }
  /* Resize Background*/
  @media only screen and (max-width: 800px) {
     .headerImage{
-            width: 100%;
-            height: auto;
+            width: 100vw;
+            height: 15rem;
             background-size: 100% auto !important;
     }
 }
@@ -73,75 +73,100 @@
 }
 
 
-
-
-.mySlides {display:none;}
-.responsive{
+.slick-slide[aria-hidden="true"] {
+    visibility: hidden;
+}
+.siText{
+    height: 80%;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    top: 10%;
+    left: 5%;
+    right: 5%;
+    /* transform: translate(-50%, -50%); */
+    color: white;
 }
-/* .responsive .sliderItem{
-    margin: 0 20px;
-} */
-.sliderContent{
-    margin: .25rem;
+.topTitle{
+    margin-bottom: auto;
 }
-.sliderContent img{
+.slider-item img{
     filter: brightness(50%);
     width: 100%;
     height: auto;
-    object-fit: contain;
+    object-fit: cover;
 }
-.sliderButton{
+.btn-la{
+    background-color: white;
+}
+.arrow-la{
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #062D92;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+}
+.arrowSlider{
+    width: 100%;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.scText{
-    height: 100%;
-    display: grid;
-    align-items: space-between;
+@media only screen and (max-width: 1200px) {
+    .arrowSlider{
+        width: 75%;
+    }
 }
-.sbPrev{
+@media only screen and (max-width: 992px) {
+    .arrowSlider{
+        width: 90%;
+    }
+}
+.arrowSlider .prev{
+    padding: .5rem .95rem;
     border-radius: 50%;
     color: white;
-    height: 2rem;
-    width: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1.5rem;
     background-color: #062D92;
 }
-.sbNext{
+.arrowSlider .next{
+    padding: .5rem .95rem;
     border-radius: 50%;
     color: white;
-    height: 2rem;
-    width: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1.5rem;
     background-color: #062D92;
 }
-.sdLeft{
-    border-radius: 5px;
-    background-color: white;
-    color: #062D92;
+@media only screen and (max-width: 430px) {
+    .responsive .slider-item{
+        width: 100% !important;
+    }
+    .slick-current div:not([class]){
+        display: flex;
+        justify-content: center;
+    }
+    .arrowSlider{
+        top: 47.5% !important;
+        width: 107.5%;
+    }
 }
-.arrowRounded{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #062D92;
-    color: white;
-    border-radius: 50%;
-    width: 1.5rem;
-    height: 1.5rem;
+@media screen and (min-width: 431px) and (max-width: 1200px) {
+    .responsive .slider-item{
+        display: flex !important;
+        justify-content: center;
+        width: 75% !important;
+    }
+    .slick-current div:not([class]){
+        display: flex;
+        justify-content: center;
+    }
+    /* .slick-current div:nth-child(2){
+        display: flex;
+        justify-content: center;
+    } */
 }
-
-
 
 
 /* SLIDER */
