--- a/public/css/part/navbar.css
+++ b/public/css/part/navbar.css
@@ -1,7 +1,7 @@
 nav{
     position: fixed !important;
     z-index: 99;
-    width: 100%;
+    width: 100vw;
     background-color: white;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
