--- a/public/css/mainFE.css
+++ b/public/css/mainFE.css
@@ -2,6 +2,7 @@
 body{
     font-family: 'Quicksand', sans-serif !important;
     width: 100vw;
+    margin : 0;
 }
 .container{
     padding:0 !important;
