--- a/public/css/page/update.css
+++ b/public/css/page/update.css
@@ -21,7 +21,8 @@
 }
 .lcImage img{
     width: 100%;
-    object-fit: contain;
+    height: auto;
+    object-fit: cover;
 }
 
 @media only screen and (max-width: 600px) {
