--- a/public/css/part/footer.css
+++ b/public/css/part/footer.css
@@ -12,8 +12,12 @@ footer{
     height: 1px;
     border: 0;
     border-top: 2px solid #ccc;
-    margin: 1em 0;
+    margin: 1rem 0;
     padding: 0;
+}
+.email p{
+    word-break: break-all;
+    white-space: normal;
 }
 
 
