--- a/public/css/page/detailUpdate.css
+++ b/public/css/page/detailUpdate.css
@@ -66,6 +66,10 @@ text-align: -webkit-center;
     margin: 1em 0;
     padding: 0;
 }
+.luContent{
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    border-radius: 10px;
+}
 .atContent p:nth-child(1){
     font-size: 12.5px !important;
 }
