--- a/public/css/page/beranda.css
+++ b/public/css/page/beranda.css
@@ -1,6 +1,5 @@
 .header{
     position: relative;
-    width: 100vw;
 }
 /* .headerImage{
     filter: brightness(80%);
@@ -12,7 +11,7 @@
 .headerImage img{
     filter: brightness(80%);
     position: relative; 
-    width: 100vw;
+    width: 100%;
     height: 30rem;
     object-fit: cover;
 }
