--- a/public/css/part/navbar.css
+++ b/public/css/part/navbar.css
@@ -5,11 +5,16 @@ nav{
     background-color: white;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
-.navbar-brand{
-    width: 65%;
-}
 .button a{
     border-radius: 75px;
+}
+
+.to-home{
+    color: #2C2C2C;
+    text-decoration: none;
+}
+.to-home:hover{
+    color: #2C2C2C;
 }
 
 .bg-blue{
