--- a/public/css/page/detailAgenda.css
+++ b/public/css/page/detailAgenda.css
@@ -73,6 +73,7 @@ text-align: -webkit-center;
     background-color: #062D92;
     color: white;
     font-weight: bold;
+    margin-bottom: 0;
 }
 
 
@@ -97,5 +98,24 @@ text-align: -webkit-center;
             width: 100vw;
             height: 15rem;
             background-size: 100% auto !important;
+    }
+    
+}
+
+@media only screen and (max-width: 424px) {
+    .btn-pesan{
+        margin-bottom: 5px;
+    }
+}
+
+@media only screen and (min-width: 575px){
+    .btn-pesan{
+        margin-bottom: 5px;
+    }
+}
+
+@media only screen and (min-width: 768px){
+    .btn-pesan{
+        margin-bottom: 0;
     }
 }
