--- a/public/css/page/beranda.css
+++ b/public/css/page/beranda.css
@@ -66,6 +66,7 @@
     border: none;
     font-family: 'Quicksand', sans-serif !important;
 }
+/* testing here */
 @media only screen and (max-width: 768px) {
     .form_search input{
         width: 90%;
