--- a/public/css/page/agenda.css
+++ b/public/css/page/agenda.css
@@ -51,6 +51,7 @@
 
 
 .luContent{
+    height: 100%;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     border-radius: 10px;
 }
