--- a/public/css/page/update.css
+++ b/public/css/page/update.css
@@ -8,6 +8,7 @@
     block-size: auto;
 }
 .luContent{
+    height: 100%;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     border-radius: 10px;
 }
