--- a/public/css/page/detailUpdate.css
+++ b/public/css/page/detailUpdate.css
@@ -12,6 +12,12 @@
 	text-align: center;
 }
 
+.daDesc p{
+    text-align: justify;
+    font-weight: bold;
+	font-size: 1.25rem!important;
+}
+
 .slick-initialized .slick-slide {
     display: block;
     text-align: -moz-center;
@@ -82,6 +88,15 @@ text-align: -webkit-center;
 .hastag a{
     text-decoration: none;
 }
+
+@media only screen and (max-width: 800px){
+    .daDesc p{
+        text-align: justify;
+        font-weight: bold;
+        font-size: 1rem!important;
+    }
+}
+
 @media only screen and (max-width: 600px) {
     .textFlex p:nth-child(1){
         width: 30%;
@@ -104,6 +119,7 @@ text-align: -webkit-center;
     .dropdown-item:hover{
         background-color: #fff;
     }
+    
     
 }
 #social-links ul{
